feat(textarea.mdx): source files for the Textarea component

--- a/docs/faststore/components/atoms/textarea.mdx
+++ b/docs/faststore/components/atoms/textarea.mdx
@@ -38,3 +38,18 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Usage
 
+## Props
+
+{/* Source:  https://github.com/vtex/faststore/blob/main/packages/components/src/atoms/Textarea/Textarea.tsx#L4-L16 */}
+
+<ComponentPropsSection component="Textarea" />
+
+---
+
+## Design Tokens
+
+{/* Source:  https://github.com/vtex/faststore/blob/main/packages/ui/src/components/atoms/Textarea/styles.scss#L3-L32 */}
+
+### Variants
+
+{/* Source:  https://github.com/vtex/faststore/blob/main/packages/ui/src/components/atoms/Textarea/styles.scss#L68 */}
