fix(dashboard.mdx): updating image

--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -80,7 +80,7 @@ The **Deploys** tab provides insights into your store's deployments, including t
 
 For more information, click any entry in the deploy table.
 
-![deployment-details](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@EDU-14723-faststore-dashboard/images/deployment-details.gif)
+![deployment-details](https://vtexhelp.vtexassets.com/assets/docs/src/deployment-details___011bb7391157ad21eb965d8bcfc75b03.gif)
 
 In the **Deploy Steps** section, select a step (example: **Build - Discovery**) to view logs. These logs appear on the right and help diagnose failed deployments.
 
