--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -54,22 +54,45 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
    }
    ```
 
-3. To display data related to the PLP (e.g., collection, category, or brand names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook in the section’s file:
+3. To display data related to the PLP (e.g., collection, category, or brand names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data, [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook:
+
+  <details>
+  <summary>`usePLP()` hook</summary>
 
     ```tsx
     import { usePLP } from '@faststore/core'
 
-    export default function CustomPLPName() {
-      const context = usePLP()
+      export default function CustomPLPName() {
+        const context = usePLP()
 
-      return (
-        <section>
-          <h1>Testing - {context.data?.collection?.seo?.title ?? 'PLP'}!</h1>
-        </section>
-      )
-    }
-
+        return (
+          <section>
+            <h1>Testing - {context.data?.collection?.seo?.title ?? 'PLP'}!</h1>
+          </section>
+        )
+      }
     ```
+
+  </details>
+
+  <details>
+  <summary>`usePDP()` hook</summary>
+
+    ```tsx
+    import { usePDP } from '@faststore/core'
+
+      export default function CustomPDPName() {
+        const context = usePDP()
+
+        return (
+          <section>
+            <h1>Testing - {context.data?.collection?.seo?.title ?? 'PLP'}!</h1>
+          </section>
+        )
+      }
+    ```
+
+  </details>
 
 ### Step 2: Sending the changes to the Headless CMS
 
