--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -21,7 +21,7 @@ Make sure the `@faststore/cli` package is updated to the latest version. If you 
 ### Configure SEO for PLPs and PDPs
 
 Set up title and description templates in the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file to dynamically generate metadata for PLPs and PDPs, such as collections, categories, subcategories, or brands.
-For instructions, see the [Configuring SEO for PLPs and PDPs](https://developers.vtex.com/docs/guides/faststore/seo-configuring-seo-for-plp-and-plp) guide.
+For instructions, see the [Configuring SEO for PLPs and PDPs](https://developers.vtex.com/docs/guides/faststore/seo-configuring-seo-for-plp-and-pdp) guide.
 
 </Steps>
 
@@ -32,14 +32,14 @@ For instructions, see the [Configuring SEO for PLPs and PDPs](https://developers
 FastStore lazy-loads sections for performance reasons. However, certain [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), such as those containing H1 headers, may need to appear in the initial HTML for SEO purposes. To disable lazy loading for these sections, consider the following:
 
 1. Open the `cms/faststore/sections.json` file in your project.
-2. Locate your custom section in the file and add the `skipLazyLoadingSection` property, and set it to `true`. For example, if your custom section is named `CustomPLPName`, the configuration would look like this:
+2. Locate your custom section in the file and add the `skipLazyLoadingSection` property, and set it to `true`. For example, if your custom section is named `CustomSEOSection`, the configuration would look like this:
 
    ```json
    ...
    {
-     "name": "CustomPLPName",
+     "name": "CustomSEOSection",
      "schema": {
-       "title": "Collection Name",
+       "title": "SEO Section",
        "description": "Custom H1 configuration",
        "type": "object",
        "required": ["skipLazyLoadingSection"],
@@ -54,7 +54,7 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
    }
    ```
 
-3. To display data related to the PLP (e.g., collection, category, or brand names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data, [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook:
+3. To display PLP data (e.g., collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook:
 
   <details>
   <summary>`usePLP()` hook</summary>
@@ -86,7 +86,7 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
 
         return (
           <section>
-            <h1>Testing - {context.data?.collection?.seo?.title ?? 'PLP'}!</h1>
+            <h1>Testing - {context.data?.product?.seo?.title ?? 'PDP'}!</h1>
           </section>
         )
       }
@@ -96,18 +96,29 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
 
 ### Step 2: Sending the changes to the Headless CMS
 
-1. Open the terminal and run `faststore cms-sync` to sync your local changes with the Headless CMS.
+1. Open the terminal and run `yarn cms-sync` to sync your local changes with the Headless CMS.
 2. Go to the VTEX Admin, access **Storefront > Headless CMS**.
-3. Access the **Product List Page** Content Type.
+3. Access the **Product List Page** or **Product Details Page** Content Type. For this instruction, we'll use the **Product List Page** Content Type.
+
+  > ⚠ Repeat these steps for the **Product Details Page** Content Type if optimizing a PDP section.
+
 4. Add the custom section you created. At the end of the section, you’ll notice the **Skip lazy loading** option.
 
-   ![skip-lazy-loading-ui-option](https://vtexhelp.vtexassets.com/assets/docs/src/skip-lazy-loading-option___32bda38cafbf728774a30ad9ada8be01.png)
+   ![skip-lazy-loading-ui-option](https://vtexhelp.vtexassets.com/assets/docs/src/skip-lazy-loading___2a0ca0c7a90d61cda31c2ce9200e377f.png)
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
-7. Search for a collection name to see your new section. For example, if you have a `Just arrived` collection, add its slug to the URL, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
+7. Search for a collection name to see the new section. For example, if you have a `Just arrived` collection, add its slug to the URL, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
 
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
+
+  <details>
+  <summary>PDP example</summary>
+  For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the exampe below, we have the **New arrivals** title for the PDP.
+
+  ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
+
+  </details>
 
 ### Step 3: Checking if the custom section is visible to search engines
 
