--- a/docs/faststore/docs/seo/configuring-seo-for-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/configuring-seo-for-plp-and-pdp.mdx
@@ -85,4 +85,4 @@ seo: {
 
 ## Lazy loading and SEO considerations
 
-FastStore uses lazy loading to improve performance. However, certain [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), such as those containing H1 headers, may need to appear in the initial HTML for SEO purposes, as search engine crawlers may not index dynamically loaded content. To optimize SEO for PLPs and PDPs, see the [Optimizing SEO by managing Lazy Loading on PLP and PDPs](https://developers.vtex.com/docs/guides/faststore/seo-optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp) guide.
+FastStore uses lazy loading to improve performance. However, certain [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), such as those containing H1 headers, may need to appear in the initial HTML for SEO purposes, as search engine crawlers may not index dynamically loaded content. To optimize SEO for PLPs and PDPs, see the [Optimizing SEO by managing Lazy Loading on PLPs and PDPs](https://developers.vtex.com/docs/guides/faststore/seo-optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp) guide.
