feat(optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx): add bold styling

--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -113,7 +113,7 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
     <details>
-      <summary>PDP example</summary>
+      <summary>**PDP example**</summary>
       
       For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the exampe below, we have the **New arrivals** title for the PDP.
 
