--- a/docs/faststore/components/molecules/textarea-field.mdx
+++ b/docs/faststore/components/molecules/textarea-field.mdx
@@ -3,6 +3,8 @@ title: "TextareaField"
 excerpt: Multi-line text fields used to get long user inputs.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/textarea___e8ea154f93f83a4e740ec760311665b0.png
+components:
+  - TextareaField.tsx
 ---
 
 The `TextareaField` is a multi-line text field component to get long user inputs. The component wraps an [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
