--- a/docs/faststore/docs/reference/project-structure/config-options.mdx
+++ b/docs/faststore/docs/reference/project-structure/config-options.mdx
@@ -37,10 +37,10 @@ Below is a description of each setting you can configure in the `discovery.confi
 ### SEO
 
 Contains settings related to Search Engine Optimization (SEO).
-- `title`: Store headline in search results.
-- `description`: Brief description of the store.
-- `titleTemplate`: Template for generating page titles.
-- `author`: Author of the store content.
+  - `title`: Store headline in search results.
+  - `description`: Brief description of the store.
+  - `titleTemplate`: Template for generating page titles.
+  - `author`: Author of the store content.
 
 ### Theme
 
@@ -48,26 +48,26 @@ Defines the look and feel of your FastStore project.
 - **Theme:** Name of the theme being used.
 - **Platform:** Ecommerce platform being used, that is, `vtex`.
 - **API:** Contains settings related to the store's API, including:
-- `storeId`: Identifier of the account or store being used.
-- `workspace`: Name of the workspace being used.
-- `environment`: Name of the specific environment being used.
-- `hideUnavailableItems`: Flag to hide or show items without available stock.
-- `incrementAddress`: Flag to determine how address information should be handled.
+  - `storeId`: Identifier of the account or store being used.
+  - `workspace`: Name of the workspace being used.
+  - `environment`: Name of the specific environment being used.
+  - `hideUnavailableItems`: Flag to hide or show items without available stock.
+  - `incrementAddress`: Flag to determine how address information should be handled.
 - **Session:** Defines the settings for the user session, including:
-- `currency`: Currency code used in the store and its corresponding symbol.
-- `locale`: Locale or language setting of the store.
-- `channel`: Trade policy, region, and seller for the sales process.
-- `country`: Country code associated with the store.
-- `deliveryMode`: How orders are fulfilled, including delivery channel, selected courier or method, and delivery window (start and end times).
-- `addressType`: Selected address type.
-- `postalCode`: Postal code set for the user session.
-- `geoCoordinates`:  Latitude and longitude (as floats) for the user session.
-- `person`: Customer's unique identification, email, first name, and last name as registered in their profile.
+  - `currency`: Currency code used in the store and its corresponding symbol.
+  - `locale`: Locale or language setting of the store.
+  - `channel`: Trade policy, region, and seller for the sales process.
+  - `country`: Country code associated with the store.
+  - `deliveryMode`: How orders are fulfilled, including delivery channel, selected courier or method, and delivery window (start and end times).
+  - `addressType`: Selected address type.
+  - `postalCode`: Postal code set for the user session.
+  - `geoCoordinates`:  Latitude and longitude (as floats) for the user session.
+  - `person`: Customer's unique identification, email, first name, and last name as registered in their profile.
 - **Cart:** Contains settings related to the shopping cart, including:
-- `id`: Unique identifier of the cart.
-- `items`: Array of items in the cart.
-- `messages`: Messages associated with the cart, such as shipping changes or any other relevant information.
-- `shouldSplitItem`: Flag to determine if an item should be split in the cart.
+  - `id`: Unique identifier of the cart.
+  - `items`: Array of items in the cart.
+  - `messages`: Messages associated with the cart, such as shipping changes or any other relevant information.
+  - `shouldSplitItem`: Flag to determine if an item should be split in the cart.
 - **Store URL:** URL of the FastStore online store.
 - **Secure Subdomain:** Secure subdomain URL for HTTPS connections.
 - **Checkout URL:** URL for the checkout process.
@@ -75,10 +75,10 @@ Defines the look and feel of your FastStore project.
 - **Account URL:** URL for the user's account section.
 - **Preview redirects:** Maps redirect URLs for different page types in preview mode.
 - **Lighthouse:** Includes settings for [Lighthouse](https://developer.chrome.com/docs/lighthouse/overview), a tool for auditing and improving the quality of web pages.
-- `server`: Server URL for running Lighthouse audits.
-- `pages`: Page URL to be audited by Lighthouse.
+  - `server`: Server URL for running Lighthouse audits.
+  - `pages`: Page URL to be audited by Lighthouse.
 - **Cypress:** Contains settings for [Cypress](https://docs.cypress.io/app/get-started/why-cypress), a testing tool.
-- `pages`: Page URL for end-to-end testing with Cypress.
+  - `pages`: Page URL for end-to-end testing with Cypress.
 - **Analytics:** Defines the [Google Tag Manager ID](https://support.google.com/tagmanager/answer/12326985?hl=en&ref_topic=14595647&sjid=12859079805529639111-SA) being used.
 - **Experimental:** Contains settings for experimental features, such as specifying the `node` and `cypress` versions being used.
 - **Account:** Name of the account.
@@ -91,15 +91,15 @@ In the following guides, explore specific configuration options for `discovery.c
 <Flex>
 
 <WhatsNextCard
-  linkTo="/docs/guides/faststore/project-structure-seo"
-  title="SEO"
+  linkTo="/"
+  title="SEO (Coming soon)"
   description="Optimize your store's visibility in search results by configuring SEO settings."
   linkTitle="See more"
 />
 
 <WhatsNextCard
-  linkTo="/docs/guides/faststore/project-structure-theme"
-  title="Theme"
+  linkTo="/"
+  title="Theme (Coming soon)"
   description="Define your store’s visual identity and functionalities by setting up theme and platform configurations."
   linkTitle="See more"
 />
