--- a/docs/faststore/components/molecules/textarea-field.mdx
+++ b/docs/faststore/components/molecules/textarea-field.mdx
@@ -60,7 +60,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-<PropsSection propsList={propsTextareaField} />
+<ComponentPropsSection component="TextareaField" />
 
 ---
 
