--- a/docs/faststore/components/molecules/tooltip.mdx
+++ b/docs/faststore/components/molecules/tooltip.mdx
@@ -10,7 +10,7 @@ The `Tooltip` is a component that provides contextual information when users hov
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
     <OverviewSection>
-      <Tooltip content="Simple tooltip" id="tooltip-content" />
+      <Tooltip content="Simple tooltip" id="tooltip-default" />
       <Tooltip
         content="Dismissible tooltip"
         placement="right-center"
