--- a/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
@@ -2,9 +2,7 @@
 title: "Sending custom events"
 ---
 
-Even though the [Analytics](https://developers.vtex.com/docs/guides/faststore/analytics-overview) module supports [Google Analytics ecommerce events](https://support.google.com/analytics/answer/14434488?hl=en) by default, a store may need to monitor customer activity not covered by the Analytics module. In these cases, it is still possible to use the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) and [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) functions to fire and intercept custom events.
-
-In this guide, learn how to define and send custom events.
+Even though the [Analytics](https://developers.vtex.com/docs/guides/faststore/analytics-overview) module supports [Google Analytics ecommerce events](https://support.google.com/analytics/answer/14434488?hl=en) by default, a store may need to monitor customer activity not covered by the Analytics module. In these cases, it is still possible to use the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) and [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) functions to fire and intercept custom events. In this guide, learn how to define and send custom events.
 
 > ℹ For a use case scenario of this implementation, see the [Use case: Implementing custom newsletter analytics events](https://docs.google.com/document/d/11ziaTwu4I-n_YcbDQi8Gavt5ss7hGqMXM393I7JsjCk/edit?tab=t.0) guide.
 
@@ -14,15 +12,13 @@ In this guide, learn how to define and send custom events.
 
 To fire a custom event, you first need to declare an interface that describes the structure of your event object, including all its properties and types. To do that, you can:
 
-- [Create a new event interface.](#creating-a-new-event-interface)
-  
-- [Extend existing types from the Analytics module.](#extending-existing-types-from-the-analytics-module)
-  
-- [Override multiple types.](#overriding-multiple-types)
+    - [Create a new event interface](#creating-a-new-event-interface)
+    - [Extend existing types from the Analytics module](#extending-existing-types-from-the-analytics-module)
+    - [Override multiple types](#overriding-multiple-types)
 
 #### Creating a new event interface
 
-You can use the `sendAnalyticsEvent` function to create a custom event interface. This function demands that the event contains two properties: 
+You can use the `sendAnalyticsEvent` function to create a custom event interface. This function demands that the event contains two properties:
 
 | Property name | Type | Description |
 | ------------------- |-------- |---------------- |
@@ -48,6 +44,7 @@ sendAnalyticsEvent<WishlistEvent>({ name, params, userId, isLoggedIn })
 ```
 
 This custom event interface allows you to capture when a user adds a product to their wishlist. It logs details like the `productId`, `productName`, and whether the user is logged in (`isLoggedIn`). This data can then be sent to your analytics tool to better understand customer behavior, such as which products are popular on wishlists and how engagement varies between logged-in and anonymous users.
+
 #### Extending existing types from the Analytics module
 
 If your event is related to an existing one, you can [extended existing types](TBD) from the Analytics module by using the [generics](https://www.typescriptlang.org/docs/handbook/2/generics.html) available on the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) function.
@@ -100,7 +97,9 @@ import { sendExtendedAnalyticsEvent } from './types'
 
 sendExtendedAnalyticsEvent({ /* Extended event object */})
 ```
+
 The example above sets up a flexible way to fire various custom events. Instead of managing multiple event types separately, the purpose of the example is to handle them all through a single interface, making. You can use this setup to track diverse customer interactions, such as adding/removing products from the cart, viewing products, or saving items to the wishlist.
+
 ### Step 2 - Intercepting custom events
 
 After creating or extending an event interface, you'll need to intercept these events using the `useAnalyticsEvent` hook. You can do that in the following:
