--- a/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
@@ -47,7 +47,7 @@ This custom event interface allows you to capture when a user adds a product to 
 
 #### Extending existing types from the Analytics module
 
-If your event is related to an existing one, you can [extended existing types](TBD) from the Analytics module by using the [generics](https://www.typescriptlang.org/docs/handbook/2/generics.html) available on the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) function.
+If your event is related to an existing one, you can extended existing types {/*ADD THE LINK FOR THE EXTENDING EXISTING EVENTS ONCE WE HAVE THE DOCUMENTATION*/} from the Analytics module by using the [generics](https://www.typescriptlang.org/docs/handbook/2/generics.html) available on the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) function.
 
 Take the following example where the `AddToCartEvent` interface is extended to also accept the `couponCode` property, useful to track if a customer applied a coupon code when adding an item to the cart.:
 
