Fix markdown issue

--- a/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
@@ -119,7 +119,7 @@ export const AnalyticsHandler = () => {
 }
 ```
 
-Also, notice that to target extended properties of events, you'll also need to configure the types of your [`useAnalyticsEvent`](/reference/sdk/analytics/useAnalyticsEvent) callback function in order to expect an event of such type.
+Also, notice that to target extended properties of events, you'll also need to configure the types of your [`useAnalyticsEvent`](/reference/sdk/analytics/useAnalyticsEvent) callback function to expect an event of such type.
 
 ```ts
 import { useAnalyticsEvent } from '@faststore/sdk'
